# cppsketch

./: .gitignore  .gitmodules  LICENSE  README.md
examples/audio/: CMakeLists.txt  LiveApp.h  LiveAudio.h  Makefile  MyLiveApp.h  MyLiveAudio.h  main.cpp
examples/audioweb/: .gitignore  AppDelegate.h  AppDelegate.mm  Biquad.h  CMakeLists.txt  LiveAudioWeb.h  Makefile  MyLiveAudioWeb.h  buildWeb.sh  index.html  main.mm
examples/audioweb/emscripten/: audio.js  em.cpp
examples/openFrameworks/: MyApp.h  README.md  main.cpp  ofApp.cpp  ofApp.h
examples/simple/: CMakeLists.txt  LiveApp.h  Makefile  MyLiveApp.h  main.cpp
examples/tetris/: CMakeLists.txt  Makefile  MyLiveAudio.h  main.cpp
simple/: Makefile
simple/src/: Dylib.cpp  Dylib.h  FileWatcher.cpp  FileWatcher.h  RecompilingDylib.h  liveCodeUtils.cpp
src/: CMakeLists.txt  Dylib.cpp  Dylib.h  FileWatcher.cpp  FileWatcher.h  ReloadableClass.h  liveCodeUtils.cpp  liveCodeUtils.h  ofxCppSketch.cpp  ofxCppSketch.h  ofxCppSketchSoundStream.cpp  ofxCppSketchSoundStream.h
